# ftapi

./: Cargo.toml  README.md
examples/: basic.rs  credentials.rs
src/: authorize.rs  cli.rs  error.rs  lib.rs  main.rs  session.rs  token.rs
src/Results/: mod.rs
src/structs/: campus.rs  me.rs  mod.rs  token.rs
tests/: authorize.rs  integration.rs  integration_test.rs  token_test.rs
