[package]
name = "ftapi"
version = "0.1.0"
edition = "2021"
authors= ["bagmeg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0.30" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json	= { version = "1.0.73" }
tokio = { version = "1.16.1", features = ["macros"] }
log = { version = "0.4.14" }
url = { version = "2.2.2" }
oauth2 = { version = "4.1.0" }
clap = { version = "3.0.14", features = ["derive", "cargo"] }
toml = { version = "0.5.8" }
env_logger = { version = "0.9.0" }