[package]
name = "ftapi"
version = "0.1.1"
edition = "2021"
authors = ["bagmeg"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ftapi"
repository = "https://github.com/bagmeg/ftapi"
description = "For 42 API users"

exclude = [
	"config.toml",
]

include = [
	"**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0.30" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = { version = "1.0.78" }
tokio = { version = "1.16.1", features = ["macros"] }
log = { version = "0.4.14" }
url = { version = "2.2.2" }
oauth2 = { version = "4.1.0" }
toml = { version = "0.5.8" }